--- a/Root/Style/Navigation.css
+++ b/Root/Style/Navigation.css
@@ -1,11 +1,15 @@
 body {
     background-color: black;
     font-family: "Inter", sans-serif;
+    padding: 0pt;
+    margin: 0pt;
+    overflow-x: hidden;
 }
 
 .NavigationBar {
 
-    position: absolute;
+    position: sticky;
+    display: block;
     width: 100%;
     height: 50pt;
     top: 0pt;
@@ -50,4 +54,28 @@ body {
     height: 40pt;
     padding-top: 12.5pt;
     padding-right: 20pt;
+}
+
+.MainContent {
+    display: block;
+    margin-top: 25pt;
+    margin-left: 25pt;
+    margin-right: 25pt;
+    padding: 25pt;
+    border-radius: 10pt;
+    color: white;
+    background-color: #101010;
+
+}
+
+.Footer {
+    display: block;
+    margin-top: 25pt;
+    color: white;
+    margin-left: 0pt;
+    margin-right: 0pt;
+    bottom: 0pt;
+    margin-bottom: 0pt;
+    padding: 30pt;
+    background-color: #202020;
 }
