--- a/Style/Navigation.css
+++ b/Style/Navigation.css
@@ -1,9 +1,26 @@
+:root {
+    --background-color: white;
+    --text-color: black;
+    --menu-background-color: #F0F0F0;
+    --page-background-color: #F5F5F5;
+}
+
+@media (prefers-color-scheme: dark) { 
+    :root {
+        --background-color: black;
+        --text-color: white;
+        --menu-background-color: #202020;
+        --page-background-color: #151515;
+    }
+}
+
 body {
-    background-color: black;
+    background-color: var(--background-color);
     font-family: "Inter", sans-serif;
     padding: 0pt;
     margin: 0pt;
     overflow-x: hidden;
+    color: var(--text-color);
 }
 
 .NavigationBar {
@@ -18,8 +35,8 @@ body {
 
     box-sizing: border-box;
 
-    background-color: #202020;
-    color: white;
+    background-color: var(--menu-background-color);
+    color: var(--text-color);
     font-size: 20pt;
     padding-top: 12.5pt;
     padding-left: 60pt;
@@ -63,19 +80,27 @@ body {
     margin-right: 25pt;
     padding: 25pt;
     border-radius: 10pt;
-    color: white;
-    background-color: #101010;
+    color: var(--text-color);
+    background-color: var(--page-background-color);
+    min-height: 100vh;
 
 }
 
 .Footer {
     display: block;
     margin-top: 25pt;
-    color: white;
+    color: var(--text-color);
     margin-left: 0pt;
     margin-right: 0pt;
     bottom: 0pt;
     margin-bottom: 0pt;
     padding: 30pt;
-    background-color: #202020;
+    background-color: var(--menu-background-color);
 }
+
+@media only screen and (min-width: 1200px) {
+    .MainContent { 
+        width: 750pt;
+        margin-left: calc(50% - 375pt);
+    }
+  }
